--- a/partB/makefile
+++ b/partB/makefile
@@ -1,5 +1,5 @@
-all: vectorlib.h addVectors.c angleBetweenVectors.c dotProductVectors.c elementProductVectors.c modulusVectors.c subtractVectors.c vectorMain.c
-		gcc -o vectorMain vectorMain.c addVectors.c angleBetweenVectors.c dotProductVectors.c elementProductVectors.c modulusVectors.c subtractVectors.c -lm
+all: vectorlib.h addVectors.c vecangle.c dotProductVectors.c elementProductVectors.c modulusVectors.c subtractVectors.c vectorMain.c
+		gcc -o vectorMain vectorMain.c addVectors.c vecangle.c dotProductVectors.c elementProductVectors.c modulusVectors.c subtractVectors.c -lm
 
 clean:
 		rm vectorMain 
