PartB: corrected some formulas and errors

--- a/partB/makefile
+++ b/partB/makefile
@@ -1,5 +1,5 @@
-all: vectorlib.h vecadd.c vecangle.c dotProductVectors.c vecprod.c vecnorm.c subtractVectors.c vectorMain.c
-		gcc -o vectorMain vectorMain.c vecadd.c vecangle.c dotProductVectors.c vecprod.c vecnorm.c subtractVectors.c -lm
+all: vectorlib.h vecadd.c vecangle.c vecdot.c vecprod.c vecnorm.c subtractVectors.c vectorMain.c
+		gcc -o vectorMain vectorMain.c vecadd.c vecangle.c vecdot.c vecprod.c vecnorm.c subtractVectors.c -lm
 
 clean:
 		rm vectorMain 
